<resources>
    <string name="app_name">YouTubeExoplayer</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="themes">App Theme</string>
    <string name="folders">Folders</string>
    <string name="videos">Videos</string>
    <string name="music">Music</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="permission_denied">Permission was not granted</string>
    <string name="type">Type</string>
    <string name="menu_change_theme">Dark Theme</string>

</resources>