<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_folders">

    <fragment
        android:id="@+id/nav_folders"
        android:name="com.krys.exoplayer.ui.folders.FoldersFragment"
        android:label="@string/folders"
        tools:layout="@layout/fragment_folders" />

    <fragment
        android:id="@+id/nav_videos"
        android:name="com.krys.exoplayer.ui.videos.VideosFragment"
        android:label="@string/videos"
        tools:layout="@layout/fragment_videos" />

    <fragment
        android:id="@+id/nav_music"
        android:name="com.krys.exoplayer.ui.music.MusicFragment"
        android:label="@string/music"
        tools:layout="@layout/fragment_music" />

</navigation>